<resources>
    <string name="app_name">WatsonChatBot</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_name">Username</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>

    <string name="request_client_id">478615355229-3ls4sbp578opprvusi4t4sl36ffqc944.apps.googleusercontent.com</string>

    <string name="title_peoples">Peoples</string>
    <string name="title_watson">Watson</string>
    <string name="title_profile">Profile</string>

    <string name="facebook_app_id">2508331349181787</string>
    <string name="fb_login_protocol_scheme">fb2508331349181787</string>
</resources>
