<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".authentification.LoginActivity">


    <EditText
        android:id="@+id/et_email"
        style="@style/viewCustom"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorLink="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:shadowColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite" />

    <EditText
        android:id="@+id/et_password"
        style="@style/viewCustom"
        android:layout_below="@id/et_email"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorLink="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:shadowColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite" />

    <Button
        android:id="@+id/btn_login"
        style="@style/viewCustom"
        android:layout_below="@id/et_password"
        android:background="@drawable/button_rounded"
        android:text="@string/login_title"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_forgot_password"
        style="@style/viewCustom"
        android:layout_below="@id/btn_login"
        android:clickable="true"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal"
        android:text="Forgot Password?"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:focusable="true" />

    <Button
        android:id="@+id/btn_register_account"
        style="@style/viewCustom"
        android:layout_alignParentBottom="true"
        android:text="@string/create_act"
        android:background="@drawable/button_rounded"
        android:textColor="@android:color/white"
        android:textStyle="bold" />


</RelativeLayout>