<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".authentication.fragments.RegisterFragment">


    <FrameLayout
        android:id="@+id/frag_register_top_layout"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@color/transparent" />


    <ImageButton
        android:id="@+id/frag_register_btn_back_from_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frag_register_top_layout"
        android:layout_margin="16dp"
        android:background="@color/transparent"
        android:src="@drawable/ic_arrow_white" />


    <TextView
        android:id="@+id/frag_register_text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="Register acount"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/frag_register_edit_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/frag_register_text_register"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/edit_rounded_dark"
        android:ems="10"
        android:hint="@string/user_name"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:shadowColor="@color/colorWhite"
        android:singleLine="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/light_gray"
        android:textColorLink="@color/colorWhite" />


    <EditText
        android:id="@+id/frag_register_edit_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/frag_register_edit_username"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/edit_rounded_dark"
        android:ems="10"
        android:hint="@string/email"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:shadowColor="@color/colorWhite"
        android:singleLine="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/light_gray"
        android:textColorLink="@color/colorWhite" />


    <EditText
        android:id="@+id/frag_register_edit_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/frag_register_edit_email"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/edit_rounded_dark"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:shadowColor="@color/colorWhite"
        android:singleLine="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/light_gray"
        android:textColorLink="@color/colorWhite" />

    <Button
        android:id="@+id/frag_register_btn_register"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/frag_register_edit_password"
        android:layout_below="@id/frag_register_edit_password"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_rounded_white"
        android:text="@string/create_act"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/frag_register_text_orSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frag_register_btn_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@color/transparent"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:text="or sign up with"
        android:textAllCaps="false"
        android:textColor="@color/light_gray"
        android:textSize="14sp" />


    <RelativeLayout
        android:layout_width="144dp"
        android:layout_height="80dp"
        android:layout_below="@+id/frag_register_text_orSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/frag_register_register_button_facebook"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="64dp"
            android:background="@drawable/button_background_facebook"
            android:clickable="true"
            android:drawableStart="@drawable/fb_logo_xml"
            android:elevation="0dp"
            android:focusable="true"
            android:paddingStart="7dp" />

        <Button
            android:id="@+id/frag_register_register_button_google"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_rounded_white"
            android:clickable="true"
            android:drawableStart="@drawable/google_logo_color_xml_big"
            android:focusable="true"
            android:paddingStart="15dp"
            android:paddingTop="1dp"/>


    </RelativeLayout>


</RelativeLayout>